--- a/src/app/actor/actor.component.html
+++ b/src/app/actor/actor.component.html
@@ -35,6 +35,9 @@
           >Add Actor To Movie</a
         >
       </li>
+      <li class="nav-item" style="padding-left: 0.2in">
+        <a class="btn btn-primary" (click)="changeSection(10)">Movie Actors</a>
+      </li>
     </ul>
   </nav>
   <!-- Actor List -->
@@ -282,5 +285,44 @@
         Add actor to movie
       </button>
     </form>
+  </div>
+  <div class="section" *ngIf="section == 10">
+    <h1 class="text-center">Select a Movie</h1>
+    <table class="table table-striped">
+      <tr>
+        <th>Title</th>
+        <th>Year</th>
+        <th>Rating</th>
+        <th>View Actors?</th>
+      </tr>
+      <tr *ngFor="let movie of moviesDB">
+        <td>{{ movie.title }}</td>
+        <td>{{ movie.year }}</td>
+        <td>{{ movie.rating }}</td>
+        <td>
+          <button (click)="selectMovieForActors(movie)" class="btn btn-primary">
+            View Actors
+          </button>
+        </td>
+      </tr>
+    </table>
+    <div *ngIf="movieActors !== ''">
+      <h1 class="text-center">Actors in {{ movieActorsTitle }}</h1>
+      <div *ngIf="movieActors.length === 0">
+        <p class="text-center">This movie has no actors</p>
+      </div>
+      <div *ngIf="movieActors.length !== 0">
+        <table class="table table-striped">
+          <tr>
+            <th>Name</th>
+            <th>Birth Year</th>
+          </tr>
+          <tr *ngFor="let item of movieActors">
+            <td>{{ item.name }}</td>
+            <td>{{ item.bYear }}</td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
